--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,6 +15,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('careers') }}">Careers</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('about') }}">About</a>
+                </li>
             </ul>
         </div>
     </div>
